# deepsvg

./: pyproject.toml
