[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[project]
version = "0.1.0"
name = "deepsvg"

dependencies = [
    #"torch==1.4.0",
    "torch>=1.4.0",
    #"torchvision==0.5.0",
    "torchvision>=0.5.0",
    #"numpy==1.16.1",
    "numpy>=1.16.1",
    "matplotlib",
    "svgwrite",
    "cairosvg",
    "IPython",
    "six>=1.12.0",
    "tensorflow",
    "tensorboardX",
    "pillow",
    "svglib",
    "tqdm",
    "jupyter",
    "scikit-image",
    "pandas",
    "networkx",
    "moviepy",
    "numba",
    "sklearn",
    "umap-learn",
    "umap-learn[plot]",
    "shapely",
    "kivy"
]

requires-python = ">=3.10"

authors = [
  {name = "Gabor", email = "a@a.com"},

]
maintainers = [
  {name = "Gabor", email = "a@a.com"}
]

readme = "README.md"

license = {file = "LICENCE"}